# wikigame-solver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: README.md  __init__.py  __main__.py  main.py  routers.py  schemas.py
api/test/: README.md  __init__.py
cli/: README.md  __init__.py  __main__.py
database/: README.md  __init__.py  __main__.py  constants.py  main.py  models.py  utilities.py
database/test/: README.md  __init__.py  constants.py  test_database.py  utilities.py
game/: README.md  __init__.py  pathfinding.py  utilities.py
game/test/: README.md  __init__.py  smaller_pathfinding.json  test_pathfinding.py  test_utilities.py  utilities.py
game/test/examples/: medium_01.json  small_01.json  small_02.json
web/: README.md  __init__.py  __main__.py  build_database.py  database_builder.py
