[tool.poetry]
name = "wikigame-solver"
version = "0.1.0"
description = "A solver for the Wikipedia Game (fewest clicks between two pages on Wikipedia)."
authors = ["Jay Hilton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.20"
pywikibot = "^6.4.0"
wikitextparser = "^0.47.5"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
hypothesis = "^6.14.1"
pytest = "^6.2.4"
mypy = "^0.910"
black = "^21.6b0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
